# SPDX-FileCopyrightText: 2022 Moritz Hedtke <Moritz.Hedtke@t-online.de>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "uring-crdt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = { version = "0.9" }
rustls = { version = "0.20", features = ["dangerous_configuration", "quic"] }
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread"] }
anyhow = { version = "1" }
webpki = { version = "0.22" }
futures-util = { version = "0.3" }
bytes = { version = "1" }